aoc2024_12/rust/src/snapshots/aoc2024_12_rust__example_round_trip.snap
---
source: aoc2024_12/rust/src/main.rs
assertion_line: 250
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
..........
.#..^.....
........#.
#.........
......#...
