aoc2024_12/rust/src/snapshots/aoc2024_12_rust__make_step_up.snap
---
source: aoc2024_12/rust/src/main.rs
assertion_line: 267
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
....^.....
.#........
........#.
#.........
......#...
