aoc2024_12/rust/src/snapshots/aoc2024_12_rust__turn_down.snap
---
source: aoc2024_12/rust/src/main.rs
assertion_line: 318
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
..........
.#..v#....
........#.
#.........
......#...
