aoc2024_12/rust/src/snapshots/aoc2024_12_rust__turn_right.snap
---
source: aoc2024_12/rust/src/main.rs
assertion_line: 301
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
....#.....
.#..>.....
........#.
#.........
......#...
